--- a/package.json
+++ b/package.json
@@ -14,17 +14,24 @@
   "dependencies": {
     "@lucia-auth/adapter-prisma": "^4.0.0",
     "@prisma/client": "^5.9.1",
+    "@radix-ui/react-separator": "^1.0.3",
+    "@radix-ui/react-slot": "^1.0.2",
     "@tanstack/react-query": "^4.36.1",
     "@trpc/client": "^10.45.0",
     "@trpc/next": "^10.45.0",
     "@trpc/react-query": "^10.45.0",
     "@trpc/server": "^10.45.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
     "lucia": "^3.0.1",
+    "lucide-react": "^0.322.0",
     "next": "14.1.0",
     "oslo": "^1.0.3",
     "react": "^18",
     "react-dom": "^18",
     "superjson": "^2.2.1",
+    "tailwind-merge": "^2.2.1",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
   },
   "devDependencies": {
