--- a/package.json
+++ b/package.json
@@ -1,52 +1,57 @@
 {
-  "name": "reader.fklk.dev",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "prisma": {
-    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
-  },
-  "dependencies": {
-    "@lucia-auth/adapter-prisma": "^4.0.0",
-    "@prisma/client": "^5.9.1",
-    "@radix-ui/react-label": "^2.0.2",
-    "@radix-ui/react-separator": "^1.0.3",
-    "@radix-ui/react-slot": "^1.0.2",
-    "@radix-ui/react-tabs": "^1.0.4",
-    "@tanstack/react-query": "^4.36.1",
-    "@trpc/client": "^10.45.0",
-    "@trpc/next": "^10.45.0",
-    "@trpc/react-query": "^10.45.0",
-    "@trpc/server": "^10.45.0",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.0",
-    "lucia": "^3.0.1",
-    "lucide-react": "^0.322.0",
-    "next": "14.1.0",
-    "oslo": "^1.0.3",
-    "react": "^18",
-    "react-dom": "^18",
-    "superjson": "^2.2.1",
-    "tailwind-merge": "^2.2.1",
-    "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.22.4"
-  },
-  "devDependencies": {
-    "@types/node": "^20.11.16",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.0",
-    "postcss": "^8",
-    "prisma": "^5.9.1",
-    "tailwindcss": "^3.3.0",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.3.3"
-  }
+    "name": "reader.fklk.dev",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint"
+    },
+    "prisma": {
+        "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
+    },
+    "dependencies": {
+        "@lucia-auth/adapter-prisma": "^4.0.0",
+        "@prisma/client": "^5.9.1",
+        "@radix-ui/react-avatar": "^1.0.4",
+        "@radix-ui/react-dialog": "^1.0.5",
+        "@radix-ui/react-label": "^2.0.2",
+        "@radix-ui/react-separator": "^1.0.3",
+        "@radix-ui/react-slot": "^1.0.2",
+        "@radix-ui/react-tabs": "^1.0.4",
+        "@tanstack/react-query": "^4.36.1",
+        "@trpc/client": "^10.45.0",
+        "@trpc/next": "^10.45.0",
+        "@trpc/react-query": "^10.45.0",
+        "@trpc/server": "^10.45.0",
+        "class-variance-authority": "^0.7.0",
+        "clsx": "^2.1.0",
+        "cmdk": "^0.2.1",
+        "embla-carousel-autoplay": "^8.0.0-rc22",
+        "embla-carousel-react": "^8.0.0-rc22",
+        "lucia": "^3.0.1",
+        "lucide-react": "^0.322.0",
+        "next": "14.1.0",
+        "oslo": "^1.0.3",
+        "react": "^18",
+        "react-dom": "^18",
+        "superjson": "^2.2.1",
+        "tailwind-merge": "^2.2.1",
+        "tailwindcss-animate": "^1.0.7",
+        "zod": "^3.22.4"
+    },
+    "devDependencies": {
+        "@types/node": "^20.11.16",
+        "@types/react": "^18",
+        "@types/react-dom": "^18",
+        "autoprefixer": "^10.0.1",
+        "eslint": "^8",
+        "eslint-config-next": "14.1.0",
+        "postcss": "^8",
+        "prisma": "^5.9.1",
+        "tailwindcss": "^3.3.0",
+        "ts-node": "^10.9.2",
+        "typescript": "^5.3.3"
+    }
 }
