--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "@lucia-auth/adapter-prisma": "^4.0.0",
         "@prisma/client": "^5.9.1",
         "@radix-ui/react-avatar": "^1.0.4",
+        "@radix-ui/react-checkbox": "^1.0.4",
         "@radix-ui/react-dialog": "^1.0.5",
         "@radix-ui/react-dropdown-menu": "^2.0.6",
         "@radix-ui/react-hover-card": "^1.0.7",
@@ -25,6 +26,7 @@
         "@radix-ui/react-slot": "^1.0.2",
         "@radix-ui/react-tabs": "^1.0.4",
         "@tanstack/react-query": "^4.36.1",
+        "@tanstack/react-table": "^8.13.0",
         "@trpc/client": "^10.45.0",
         "@trpc/next": "^10.45.0",
         "@trpc/react-query": "^10.45.0",
@@ -37,9 +39,11 @@
         "lucia": "^3.0.1",
         "lucide-react": "^0.322.0",
         "next": "14.1.0",
+        "next-themes": "^0.2.1",
         "oslo": "^1.0.3",
         "react": "^18",
         "react-dom": "^18",
+        "sonner": "^1.4.2",
         "superjson": "^2.2.1",
         "tailwind-merge": "^2.2.1",
         "tailwindcss-animate": "^1.0.7",
